@@ -48,6 +48,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - properly escape characters (&"'<>) in XML output)
   b - ignore port when checking host in svr_get_privilege()
   b - restore ability to parse -W x=geometry:{...,...}
+  e - from Simon Toth: If no available amount is specified for a resource 
+      and the max limit is set, the requirement should be checked against 
+      the maximum only (for scheduler, bugzilla 23). 
 
 2.4.8
   e - Bugzilla bug 22. HIGH_PRECISION_FAIRSHARE for fifo scheduling.
